[gd_scene load_steps=8 format=3 uid="uid://by1v0dajsc3mb"]

[ext_resource type="Script" path="res://option_menu.gd" id="1_cyq5w"]
[ext_resource type="Texture2D" uid="uid://bdd5nhnjx6wy2" path="res://img/782.jpg" id="2_l4r2w"]
[ext_resource type="Texture2D" uid="uid://ckab6o3pielwx" path="res://img/aset/belakang_pilihan_3.png" id="3_uqw72"]
[ext_resource type="SystemFont" uid="uid://ccndfb05mlrvo" path="res://tres/Font_tombol.tres" id="4_ffidm"]
[ext_resource type="Theme" uid="uid://cb21ut3dnxurk" path="res://tres/tombol.tres" id="5_c8xtc"]

[sub_resource type="SystemFont" id="SystemFont_8boma"]
font_names = PackedStringArray("Pixellari")

[sub_resource type="Theme" id="Theme_7vam2"]

[node name="setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cyq5w")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.435193, 0.435192, 0.435192, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l4r2w")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 45

[node name="Seperator6" type="Control" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/Seperator6"]
layout_mode = 2
offset_left = -2.0
offset_top = 97.0
offset_right = 1278.0
offset_bottom = 161.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 13
theme_override_fonts/font = SubResource("SystemFont_8boma")
theme_override_font_sizes/font_size = 100
text = "PENGATURAN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer2/VBoxContainer2"]
visible = false
layout_mode = 2
item_count = 1
popup/item_0/text = "1920x1080"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2

[node name="vol" type="Control" parent="MarginContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_7vam2")

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/VBoxContainer2/HBoxContainer/vol"]
layout_mode = 0
offset_left = 472.0
offset_top = -80.0
offset_right = 772.0
offset_bottom = 301.0
texture = ExtResource("3_uqw72")
expand_mode = 1

[node name="volume" type="HSlider" parent="MarginContainer2/VBoxContainer2/HBoxContainer/vol/TextureRect"]
layout_mode = 2
offset_left = 57.0
offset_top = 92.0
offset_right = 247.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer2/HBoxContainer/vol/TextureRect"]
layout_mode = 2
offset_left = 115.0
offset_top = 61.0
offset_right = 192.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_ffidm")
theme_override_font_sizes/font_size = 24
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mute" type="CheckBox" parent="MarginContainer2/VBoxContainer2/HBoxContainer/vol/TextureRect"]
layout_mode = 2
offset_left = 106.0
offset_top = 121.0
offset_right = 196.0
offset_bottom = 191.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_ffidm")
theme_override_font_sizes/font_size = 23
text = "Mute"
alignment = 1
icon_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer2/VBoxContainer2/HBoxContainer/vol/TextureRect"]
layout_mode = 0
offset_left = 91.0
offset_top = 244.0
offset_right = 221.0
offset_bottom = 267.0
theme_override_fonts/font = ExtResource("4_ffidm")
theme_override_font_sizes/font_size = 21
text = "Versi 0.943"

[node name="Control" type="Control" parent="MarginContainer2/VBoxContainer2/HBoxContainer/vol/TextureRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Kembali" type="Button" parent="MarginContainer2/VBoxContainer2/HBoxContainer/vol/TextureRect/Control"]
layout_mode = 0
offset_left = 104.0
offset_top = 271.0
offset_right = 202.0
offset_bottom = 314.0
theme = ExtResource("5_c8xtc")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_ffidm")
theme_override_font_sizes/font_size = 22
text = "Kembali"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_right = 960.0
offset_bottom = 540.0
alignment = 1

[connection signal="value_changed" from="MarginContainer2/VBoxContainer2/HBoxContainer/vol/TextureRect/volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer2/VBoxContainer2/HBoxContainer/vol/TextureRect/mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/HBoxContainer/vol/TextureRect/Control/Kembali" to="." method="_on_kembali_pressed"]
